@@ -2125,6 +2125,6 @@ No description provided
 
 #^theme_button trim=ends
 
-<div id="theme_toggle" style="position:fixed;top:0px;right:0px;background:black;color:white;cursor:pointer;" onclick="$('body').toggleClass('print')">Toggle<br/>Theme</div>
+<div id="theme_toggle" class="theme_button" onclick="$('body').toggleClass('print')">Change theme</div>
 
 
